# aidrax-prompt-matrix

./: .gitignore  README.md  ai.py  db.py  gui.py  install.sh  main.py  prompt_manager_launchers.py  pyproject.toml  requirements.txt
.github/workflows/: publish-pages-registry.yml  windows-registry-smoke.yml
scripts/: build_python_package.sh  build_simple_index.py  build_windows_sync_bundle.py  install_prompt_matrix_windows.ps1  publish_python_package.sh  seed_authorized_remote_access_prompts.py  seed_homebridge_enterprise_prompts.py  seed_registry_update_prompt.py  seed_safeguard_ops_prompts.py
